--- a/lessons/precalc/unit4-review.html
+++ b/lessons/precalc/unit4-review.html
@@ -1,4 +1,4 @@
-<!-- unit4-review.html - Full Updated with Fixed Images -->
+<!-- unit4-review.html - Full Code with Working Images -->
 <h2>Unit 4: Review and Applications of Conic Sections</h2>
 
 <h3>Learning Objectives</h3>
@@ -12,7 +12,7 @@
 <p>When the plane passes through the vertex: point, line, or intersecting lines.</p>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Degenerate_conics.svg" alt="Degenerate conics: point, line, two lines" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/conicdegenerate.png" alt="Degenerate conics diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Systems and Applications</h3>
