--- a/lessons/precalc/index.html
+++ b/lessons/precalc/index.html
@@ -74,7 +74,7 @@
     <div class="unit-grid">
         <div class="unit-card">
             <h3>Unit 1</h3>
-            <p>Introduction to Conic Sections<br>(Overview, Circle, Ellipse)</p>
+           <p>Introduction to Conic Sections<br>(Overview, Circle, and Ellipse)</p>
             <a href="unit1-conic.html" target="_self">Open Unit 1</a>
         </div>
 
