--- a/index.html
+++ b/index.html
@@ -6,23 +6,19 @@
     <title>Online SHS - Education is Meant to be Free</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <!-- Sidebar -->
-    <div class="sidebar show" id="sidebar">
-        <h4 class="text-center py-4 text-white mb-0">Online SHS</h4>
-        <ul class="nav flex-column mt-4">
-            <li class="nav-item"><button class="nav-link active w-100" data-tab="mypage">My Page</button></li>
-            <li class="nav-item"><button class="nav-link w-100" data-tab="lessons">Lessons</button></li>
-            <li class="nav-item"><button class="nav-link w-100" data-tab="quiz">Activity/Quiz</button></li>
-            <li class="nav-item"><button class="nav-link w-100" data-tab="tests">Tests</button></li>
+    <div class="sidebar" id="sidebar">
+        <h4 class="text-center py-4 text-white">Online SHS</h4>
+        <ul class="nav flex-column">
+            <li class="nav-item"><a href="#" class="nav-link active" data-tab="mypage">My Page</a></li>
+            <li class="nav-item"><a href="#" class="nav-link" data-tab="lessons">Lessons</a></li>
+            <li class="nav-item"><a href="#" class="nav-link" data-tab="quiz">Activity/Quiz</a></li>
+            <li class="nav-item"><a href="#" class="nav-link" data-tab="tests">Tests</a></li>
         </ul>
-        <button id="toggleSidebar" class="position-absolute bottom-0 start-0 ms-3 mb-3 bg-transparent border-0 text-white fs-3">
-            <i class="ri-menu-fold-line"></i>
-        </button>
+        <button id="toggleSidebar" class="toggle-btn"><i class="ri-menu-line"></i></button>
     </div>
 
     <!-- Overlay for mobile -->
@@ -31,14 +27,13 @@
     <!-- Main Content -->
     <div class="main-content" id="mainContent">
         <div class="container mt-5" id="contentArea">
-            <!-- My Page -->
             <div id="mypage" class="tab-content">
                 <h1 class="text-center display-4">Welcome Back!</h1>
                 <h2 class="text-center text-primary mb-5">"EDUCATION IS MEANT TO BE FREE"</h2>
-                <p class="text-center lead">This is your free online Senior High School platform for Grade 11 STEM subjects.</p>
+                <p class="text-center lead">This is your free online Senior High School platform for Grade 11 STEM subjects. Learn at your own pace with detailed lessons, quizzes, tests, progress tracking, and study time monitoring.</p>
                 
                 <h3 class="mt-5">Your Progress</h3>
-                <div id="progressCharts" class="row"></div>
+                <div id="progressCharts"></div>
                 
                 <h3 class="mt-4">Points: <span id="totalPoints">0</span> / 1000 (Aim for 800 to pass)</h3>
                 <h3>Study Time: <span id="studyTime">0</span> minutes</h3>
@@ -47,7 +42,6 @@
                 <ul id="lessonHistory" class="list-group"></ul>
             </div>
 
-            <!-- Other tabs -->
             <div id="lessons" class="tab-content d-none"></div>
             <div id="quiz" class="tab-content d-none"></div>
             <div id="tests" class="tab-content d-none"></div>
