--- a/index.html
+++ b/index.html
@@ -3,155 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Free School - Grade 11 STEM</title>
-  <style>
-    :root {
-      --bg: #f8f9fa;
-      --surface: #ffffff;
-      --text: #2d3436;
-      --text-light: #636e72;
-      --accent: #0984e3;
-      --accent-light: #74b9ff;
-      --border: #dfe6e9;
-      --shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-      min-height: 100vh;
-    }
-
-    /* Sidebar */
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: -280px;
-      width: 280px;
-      height: 100%;
-      background: var(--surface);
-      box-shadow: var(--shadow);
-      transition: left 0.3s ease;
-      z-index: 1000;
-      overflow-y: auto;
-    }
-    .sidebar.open { left: 0; }
-
-    .sidebar-header {
-      padding: 20px;
-      text-align: center;
-      border-bottom: 1px solid var(--border);
-    }
-    .sidebar-header h2 {
-      font-size: 1.4rem;
-      color: var(--accent);
-    }
-    .sidebar-header p {
-      font-size: 0.9rem;
-      color: var(--text-light);
-      margin-top: 5px;
-    }
-
-    .nav-list {
-      list-style: none;
-      padding: 20px 0;
-    }
-    .nav-item {
-      margin: 8px 0;
-    }
-    .nav-link {
-      display: block;
-      padding: 14px 30px;
-      color: var(--text);
-      text-decoration: none;
-      transition: background 0.2s, color 0.2s;
-    }
-    .nav-link:hover, .nav-link.active {
-      background: var(--accent-light);
-      color: white;
-    }
-
-    /* Overlay */
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.4);
-      opacity: 0;
-      visibility: hidden;
-      transition: all 0.3s;
-      z-index: 999;
-    }
-    .overlay.active {
-      opacity: 1;
-      visibility: visible;
-    }
-
-    /* Main Content */
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      min-height: 100vh;
-    }
-
-    header {
-      display: flex;
-      align-items: center;
-      padding: 15px 0;
-      border-bottom: 1px solid var(--border);
-      margin-bottom: 30px;
-    }
-
-    .menu-btn {
-      font-size: 1.8rem;
-      cursor: pointer;
-      margin-right: 20px;
-      color: var(--text);
-    }
-
-    .title {
-      font-size: 1.6rem;
-      font-weight: 600;
-    }
-
-    .tab-content {
-      display: none;
-    }
-    .tab-content.active {
-      display: block;
-    }
-
-    .card {
-      background: var(--surface);
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: var(--shadow);
-      margin-bottom: 20px;
-    }
-
-    .welcome-text {
-      text-align: center;
-      font-size: 1.1rem;
-      color: var(--text-light);
-      margin-bottom: 30px;
-      font-style: italic;
-    }
-
-    @media (max-width: 768px) {
-      .container { padding: 15px; }
-      .title { font-size: 1.4rem; }
-      .menu-btn { font-size: 1.6rem; }
-    }
-  </style>
+  <title>Online SHS - Grade 11 STEM</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="sidebar-header">
-      <h2>My Free School</h2>
+      <h2>Online SHS</h2>
       <p>Grade 11 STEM</p>
     </div>
     <ul class="nav-list">
@@ -177,7 +36,7 @@
   <div class="container">
     <header>
       <div class="menu-btn" id="menuBtn">☰</div>
-      <h1 class="title">My Free School</h1>
+      <h1 class="title">Online SHS</h1>
     </header>
 
     <!-- My Page Tab -->
