--- a/lessons/General_Mathematics/unit1/index.html
+++ b/lessons/General_Mathematics/unit1/index.html
@@ -47,11 +47,11 @@
           <div class="status">Status: Available</div>
         </a>
 
-        <a href="#" class="lesson-card" style="opacity:0.7;">
-          <h4>Lesson 2: Representations of Functions</h4>
-          <p>Tables, graphs, equations, real-life modeling. (Coming soon)</p>
-        </a>
-
+        <a href="lesson2.html" class="lesson-card">
+  <h4>Lesson 2: Representations of Functions</h4>
+  <p>Tables, graphs, equations, real-life modeling.</p>
+  <div class="status">Status: Available</div>
+</a>
         <a href="#" class="lesson-card" style="opacity:0.7;">
           <h4>Lesson 3: Operations on Functions & Composition</h4>
           <p>Addition, subtraction, multiplication, division, composition. (Coming soon)</p>
