--- a/lessons/General_Mathematics/unit1/index.html
+++ b/lessons/General_Mathematics/unit1/index.html
@@ -59,14 +59,16 @@
           <div class="status">Status: Available</div>
         </a>
 
-        <a href="#" class="lesson-card" style="opacity:0.7;">
+        <a href="lesson4.html" class="lesson-card">
           <h4>Lesson 4: Inverse Functions</h4>
-          <p>One-to-one, horizontal line test, finding and graphing inverses. (Coming soon)</p>
+          <p>One-to-one, horizontal line test, finding and graphing inverses, verification.</p>
+          <div class="status">Status: Available</div>
         </a>
 
-        <a href="#" class="lesson-card" style="opacity:0.7;">
+        <a href="lesson5.html" class="lesson-card">
           <h4>Lesson 5: Piecewise & Special Functions</h4>
-          <p>Absolute value, greatest integer, signum functions. (Coming soon)</p>
+          <p>Absolute value, greatest integer (floor/ceiling), step, signum functions, real-life applications.</p>
+          <div class="status">Status: Available</div>
         </a>
       </div>
     </div>
