--- a/lessons/General_Mathematics/unit1/lesson4.html
+++ b/lessons/General_Mathematics/unit1/lesson4.html
@@ -125,21 +125,21 @@
 
     <div class="card section">
       <h3>One-to-One Functions</h3>
-      <p>A function is <strong>one-to-one</strong> if it passes the horizontal line test (no horizontal line intersects the graph more than once).</p>
+      <p>A function is one-to-one if it passes the horizontal line test.</p>
 
-      <img src="https://math.libretexts.org/@api/deki/files/17991/Fig_2.05_HLT.jpg" alt="Horizontal Line Test Examples">
+      <img src="https://math.libretexts.org/@api/deki/files/17991/Fig_2.05_HLT.jpg" alt="Horizontal Line Test - One-to-One">
 
-      <img src="https://flexbooks.ck12.org/cbook/ck-12-math-analysis-concepts/section/3.2/primary/related/plix/horizontal-line-test-one-to-one-functions-and-inverses-576c62908e0e087d5a9ed473/image.jpg" alt="Horizontal Line Test Illustration">
+      <img src="https://flexbooks.ck12.org/cbook/ck-12-math-analysis-concepts/section/3.2/primary/related/plix/horizontal-line-test-one-to-one-functions-and-inverses-576c62908e0e087d5a9ed473/image.jpg" alt="Horizontal Line Test Examples">
 
       <div class="example">
-        Linear functions (slope ≠ 0) are one-to-one.<br>
-        Quadratic functions are not (parabola fails the test).
+        Linear (non-horizontal) = one-to-one<br>
+        Quadratic = not one-to-one
       </div>
     </div>
 
     <div class="card section">
       <h3>Finding Inverse Algebraically</h3>
-      <p>Swap x and y, then solve for y.</p>
+      <p>Swap x and y, solve for y.</p>
 
       <div class="example">
         <strong>Example 1:</strong> f(x) = 3x + 6<br>
@@ -154,20 +154,20 @@
       </div>
 
       <div class="example">
-        <strong>Example 3 (Temperature):</strong> F to C: C(F) = (5/9)(F - 32)<br>
-        Inverse C to F: F(C) = (9/5)C + 32
+        <strong>Example 3:</strong> Temperature F to C: f(F) = (5/9)(F - 32)<br>
+        Inverse: f⁻¹(C) = (9/5)C + 32
       </div>
     </div>
 
     <div class="card section">
       <h3>Graphing Inverse Functions</h3>
-      <p>Reflect the graph of f over the line y = x.</p>
+      <p>Reflect over the line y = x.</p>
 
-      <img src="https://math.libretexts.org/@api/deki/files/18003/Fig_2.05_inverse_graph.jpg" alt="Reflection over y=x Example">
+      <img src="https://math.libretexts.org/@api/deki/files/18003/Fig_2.05_inverse_graph.jpg" alt="Reflection over y=x">
 
-      <img src="https://mathbitsnotebook.com/Algebra1/Functions/FNInverseGraphEx.jpg" alt="Inverse Graph Reflection">
+      <img src="https://mathbitsnotebook.com/Algebra1/Functions/FNInverseGraphEx.jpg" alt="Inverse Graph Example">
 
-      <img src="https://math.libretexts.org/@api/deki/files/18010/Fig_2.05_inverse_graph2.jpg" alt="Another Reflection Example">
+      <img src="https://math.libretexts.org/@api/deki/files/18010/Fig_2.05_inverse_graph2.jpg" alt="Another Inverse Reflection">
     </div>
 
     <div class="card section">
@@ -175,16 +175,16 @@
       <p>(f ∘ f⁻¹)(x) = x and (f⁻¹ ∘ f)(x) = x</p>
 
       <div class="example">
-        For f(x) = 3x + 6, f⁻¹(x) = (x - 6)/3<br>
-        (f ∘ f⁻¹)(x) = 3*((x - 6)/3) + 6 = x
+        f(x) = 3x + 6, f⁻¹(x) = (x - 6)/3<br>
+        (f ∘ f⁻¹)(x) = 3*((x - 6)/3) + 6 = x ✓
       </div>
     </div>
 
     <div class="card section">
       <h3>Domain and Range of Inverse</h3>
-      <p>They swap: Domain of f⁻¹ = Range of f, Range of f⁻¹ = Domain of f</p>
+      <p>They swap places.</p>
 
-      <img src="https://d138zd1ktt9iqe.cloudfront.net/media/seo_landing_files/domain-and-range-of-inverse-function-1633065905.png" alt="Domain Range Swap Illustration">
+      <img src="https://math.libretexts.org/@api/deki/files/18011/Fig_2.05_domain_range_inverse.jpg" alt="Domain and Range Swap">
     </div>
 
     <div class="card section">
@@ -197,7 +197,7 @@
       <div class="video-embed">
         <iframe src="https://www.youtube.com/embed/MBRQVpgoX5Q" allowfullscreen></iframe>
       </div>
-      <p style="text-align:center;">How to Find the Inverse of a Function | General Mathematics Grade 11</p>
+      <p style="text-align:center;">How to Find the Inverse of a Function | General Mathematics</p>
     </div>
 
     <div class="card practice">
@@ -207,14 +207,14 @@
         <li>Find inverse of f(x) = 4x - 8.</li>
         <li>Is f(x) = x² one-to-one? Restrict domain to make it so.</li>
         <li>Verify f(x) = x + 5 and f⁻¹(x) = x - 5 are inverses.</li>
-        <li>Real-life: Speed s = distance d / time t. Find inverse for t.</li>
+        <li>Real-life: Speed s = d / t. Find inverse for t.</li>
       </ol>
 
       <button class="show-answer">Show Answers</button>
       <div class="answer">
         <strong>Answers:</strong><br><br>
         1. f⁻¹(x) = (x + 8)/4<br>
-        2. No. Restrict to x ≥ 0 or x ≤ 0<br>
+        2. No. Restrict x ≥ 0 or x ≤ 0<br>
         3. (f ∘ f⁻¹)(x) = x ✓<br>
         4. t = d / s
       </div>
