--- a/index.html
+++ b/index.html
@@ -5,37 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Online SHS - Grade 11 STEM</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Additional styles for subject grid - clean and elegant */
-    .subjects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .subject-card {
-      background: var(--surface);
-      border-radius: 12px;
-      padding: 25px;
-      text-align: center;
-      box-shadow: var(--shadow);
-      transition: transform 0.2s, box-shadow 0.2s;
-      text-decoration: none;
-      color: var(--text);
-    }
-    .subject-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
-    .subject-card h3 {
-      margin-bottom: 10px;
-      color: var(--accent);
-    }
-    .subject-card p {
-      color: var(--text-light);
-      font-size: 0.95rem;
-    }
-  </style>
 </head>
 <body>
   <!-- Sidebar -->
@@ -101,13 +70,14 @@
       <div class="card">
         <h3>Your Progress Overview</h3>
         <p style="color:var(--text-light); margin-top:10px;">
-          Progress charts, scores, and subject details will appear here as you complete lessons, quizzes, and tests.
+          Progress charts, scores, study time, and personal memos will appear here as you start learning.
         </p>
       </div>
     </div>
 
     <!-- Lessons Tab -->
     <div id="lessons" class="tab-content">
+      <!-- [Your existing Lessons tab content with subject cards] -->
       <div class="card">
         <h2>Select a Subject</h2>
         <p style="color:var(--text-light); margin-top:10px; text-align:center;">
@@ -120,59 +90,64 @@
             <p>Functions, rational equations, exponential & logarithmic functions, business math, logic</p>
           </a>
 
+          <!-- Other subjects as before, opacity 0.6 if not ready -->
           <a href="#" class="subject-card" style="opacity:0.6;">
             <h3>Statistics and Probability</h3>
             <p>Coming soon...</p>
           </a>
 
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Pre-Calculus</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Basic Calculus</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>General Physics 1</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>General Chemistry 1</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Earth and Life Science</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Physical Science</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Filipino sa Piling Larangan (Akademik)</h3>
-            <p>Coming soon... (in Filipino)</p>
-          </a>
+          <!-- Repeat for other subjects -->
         </div>
       </div>
     </div>
 
-    <!-- Activity/Quiz Tab -->
+    <!-- Activity / Quiz Tab -->
     <div id="activity" class="tab-content">
       <div class="card">
         <h2>Activities & Quizzes</h2>
         <p style="color:var(--text-light); margin-top:10px;">
-          Practice with 10-question quizzes for each unit. Auto-graded with detailed feedback.
+          Practice with short quizzes for each lesson. Quizzes unlock after you mark the lesson as complete.
         </p>
-        <p style="margin-top:20px; text-align:center; color:var(--text-light);">
-          Quizzes will be organized by subject and unit.
-        </p>
+
+        <div class="card" style="margin-top:30px;">
+          <h3>General Mathematics - Unit 1</h3>
+          <div style="display:grid; gap:20px; margin-top:20px;">
+            <div class="lesson-card" style="padding:20px; background:var(--surface); border-radius:12px; box-shadow:var(--shadow);">
+              <h4>Lesson 1 Quiz: Review of Functions</h4>
+              <p style="color:var(--text-light);">10 questions • 15 minutes</p>
+              <button id="l1quizBtn" class="quiz-btn" data-quiz="quizzes/General_Mathematics/unit1/lesson1-quiz.html">Take Quiz</button>
+              <p id="l1status" class="quiz-status">Status: Locked</p>
+            </div>
+
+            <div class="lesson-card" style="padding:20px; background:var(--surface); border-radius:12px; box-shadow:var(--shadow);">
+              <h4>Lesson 2 Quiz: Representations of Functions</h4>
+              <p style="color:var(--text-light);">10 questions • 15 minutes</p>
+              <button id="l2quizBtn" class="quiz-btn" data-quiz="quizzes/General_Mathematics/unit1/lesson2-quiz.html">Take Quiz</button>
+              <p id="l2status" class="quiz-status">Status: Locked</p>
+            </div>
+
+            <div class="lesson-card" style="padding:20px; background:var(--surface); border-radius:12px; box-shadow:var(--shadow);">
+              <h4>Lesson 3 Quiz: Operations on Functions</h4>
+              <p style="color:var(--text-light);">10 questions • 15 minutes</p>
+              <button id="l3quizBtn" class="quiz-btn" data-quiz="quizzes/General_Mathematics/unit1/lesson3-quiz.html">Take Quiz</button>
+              <p id="l3status" class="quiz-status">Status: Locked</p>
+            </div>
+
+            <div class="lesson-card" style="padding:20px; background:var(--surface); border-radius:12px; box-shadow:var(--shadow);">
+              <h4>Lesson 4 Quiz: Inverse Functions</h4>
+              <p style="color:var(--text-light);">10 questions • 15 minutes</p>
+              <button id="l4quizBtn" class="quiz-btn" data-quiz="quizzes/General_Mathematics/unit1/lesson4-quiz.html">Take Quiz</button>
+              <p id="l4status" class="quiz-status">Status: Locked</p>
+            </div>
+
+            <div class="lesson-card" style="padding:20px; background:var(--surface); border-radius:12px; box-shadow:var(--shadow);">
+              <h4>Lesson 5 Quiz: Piecewise & Special Functions</h4>
+              <p style="color:var(--text-light);">10 questions • 15 minutes</p>
+              <button id="l5quizBtn" class="quiz-btn" data-quiz="quizzes/General_Mathematics/unit1/lesson5-quiz.html">Take Quiz</button>
+              <p id="l5status" class="quiz-status">Status: Locked</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -210,21 +185,42 @@
     document.querySelectorAll('.nav-link').forEach(link => {
       link.addEventListener('click', (e) => {
         e.preventDefault();
-
         document.querySelectorAll('.nav-link').forEach(l => l.classList.remove('active'));
         link.classList.add('active');
-
         const tabId = link.getAttribute('data-tab');
-        document.querySelectorAll('.tab-content').forEach(tab => {
-          tab.classList.remove('active');
-        });
+        document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
         document.getElementById(tabId).classList.add('active');
-
         if (window.innerWidth <= 768) {
           sidebar.classList.remove('open');
           overlay.classList.remove('active');
         }
       });
+    });
+
+    // Quiz unlock system
+    const completed = JSON.parse(localStorage.getItem('completedLessons') || '{}');
+
+    const quizzes = ['l1', 'l2', 'l3', 'l4', 'l5'];
+    quizzes.forEach((id, index) => {
+      const btn = document.getElementById(id + 'quizBtn');
+      const status = document.getElementById(id + 'status');
+      const lessonKey = 'gm_unit1_lesson' + (index + 1);
+      if (btn && status) {
+        if (completed[lessonKey]) {
+          btn.disabled = false;
+          btn.style.background = 'var(--accent)';
+          btn.style.cursor = 'pointer';
+          btn.onclick = () => window.location.href = btn.getAttribute('data-quiz');
+          status.textContent = 'Status: Unlocked';
+          status.style.color = '#27ae60';
+        } else {
+          btn.disabled = true;
+          btn.style.background = '#95a5a6';
+          btn.style.cursor = 'not-allowed';
+          status.textContent = 'Status: Locked (complete Lesson ' + (index + 1) + ' first)';
+          status.style.color = '#e74c3c';
+        }
+      }
     });
   </script>
 </body>
